# newm-server

./: .dockerignore  .editorconfig  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  build.gradle.kts  createEncryptor_studio.sh  createKey_studio.sh  docker-compose.yml  gradle.properties  settings.gradle.kts
.agent/: readme.md
.githooks/: pre-commit
.github/: copilot-instructions.md
api-docs/: README.md
ardrive-turbo-kotlin/: README.md  build.gradle.kts
ktor-grpc/: build.gradle.kts
newm-admin/: Cargo.toml  DESIGN_GUIDE.md  README.md  build.rs  test_earnings.csv  test_earnings_headerless.csv
newm-admin/assets/: icon.icns
newm-admin/packaging/linux/: build-appimage.sh  io.newm.newm-admin.appdata.xml  io.newm.newm-admin.desktop  newm-admin.desktop
newm-admin/packaging/macos/: Entitlements.plist  Info.plist  bundle.sh
newm-admin/packaging/windows/: build-msi.ps1  main.wxs
newm-admin/src/: app.rs  auth.rs  colors.rs  csv_import.rs  earnings.rs  http_client.rs  jwt.rs  main.rs  session.rs  toast.rs
newm-admin/src/views/: dashboard.rs  login.rs  mod.rs
newm-admin/wix/: main.wxs
newm-chain/: Dockerfile  README.md  build.gradle.kts  dbsetup.md  docker-compose.yml
newm-chain-db/: build.gradle.kts
newm-chain-grpc/: build.gradle.kts
newm-chain-util/: build.gradle.kts
newm-objectpool/: build.gradle.kts
newm-server/: .gitignore  Dockerfile  ReadMe.md  build.gradle.kts  docker-compose.yml
newm-server-common/: README.md  build.gradle.kts
newm-server-mobile/: README.md  build.gradle.kts
newm-server-portal/: README.md  build.gradle.kts
newm-shared/: build.gradle.kts
newm-tx-builder/: build.gradle.kts
(+1266 files in other folders)
