[package]
name = "newm-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI Framework
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

# Async Compatibility (bridges Tokio futures to GPUI's executor)
async-compat = "0.2"

# HTTP Client (rustls-tls for cross-compilation compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"

# JWT Parsing
base64 = "0.22"
